fix the overlapping img in listing show

--- a/app/assets/stylesheets/_listings_show.scss
+++ b/app/assets/stylesheets/_listings_show.scss
@@ -1,7 +1,7 @@
 #listing-page {
   img {
-    width: 300px; /* You can set the dimensions to whatever you want */
-    height: 300px;
+    // width: 300px; /* You can set the dimensions to whatever you want */
+    // height: 300px;
     object-fit: cover;
     margin-bottom: 10px;
   }
